# certificates

./: .gitignore  CNAME  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: publish.yml
1.0/: 404.html  index.html  sitemap.xml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/c001/: trainee-dat-nguyen-2025-07.html  trainee-joran-saillier-2025-07.html  trainee-minh-duc-le-tien-2025-07.html  trainee-nguyen-le-ngoc-2025-07.html  trainee-nhat-lam-vo-2025-07.html  trainee-nhu-tran-2025-07.html  trainee-nikolay-galstukov-2025-07.html  trainee-sumit-kamra-2025-07.html  trainee-tan-nguyen-2025-07.html  trainee-tin-nguyen-2025-07.html  trainee-yinvang-ho-2025-07.html
1.0.1/c002/: trainee-minh-ngo-2026-02.html
1.0.1/c003/: trainee-jane-smith-2026-03.html
1.0.1/overrides/: main.html
1.0/c001/: trainee-dat-nguyen-2025-07.html  trainee-joran-saillier-2025-07.html  trainee-minh-duc-le-tien-2025-07.html  trainee-nguyen-le-ngoc-2025-07.html  trainee-nhat-lam-nguyen-2025-07.html  trainee-nhat-lam-vo-2025-07.html  trainee-nhu-tran-2025-07.html  trainee-nikolay-galstukov-2025-07.html  trainee-sumit-kamra-2025-07.html  trainee-tan-nguyen-2025-07.html  trainee-tin-nguyen-2025-07.html  trainee-yinvang-ho-2025-07.html
1.0/c002/: trainee-minh-ngo-2026-02.html
1.0/c003/: trainee-jane-smith-2026-03.html
1.0/overrides/: main.html
1.0/search/: search_index.js  search_index.json
docs/: index.md
docs/c001/: trainee-dat-nguyen-2025-07.md  trainee-joran-saillier-2025-07.md  trainee-minh-duc-le-tien-2025-07.md  trainee-nguyen-le-ngoc-2025-07.md  (+8 more)
(+4 files in other folders)
